--- a/Lights Out.csproj
+++ b/Lights Out.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Constants.cs" />
     <Compile Include="ContentManager.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameManager.cs" />
+    <Compile Include="GameObject.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Player.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
