--- a/Lights Out.csproj
+++ b/Lights Out.csproj
@@ -42,6 +42,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ContentManager.cs" />
