--- a/Lights Out.csproj
+++ b/Lights Out.csproj
@@ -42,6 +42,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Bullet.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Constants.cs" />
@@ -61,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Ground.png" />
     <Content Include="Content\Player.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
