--- a/Lights Out.csproj
+++ b/Lights Out.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquareDrawer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -64,6 +65,7 @@
   <ItemGroup>
     <Content Include="Content\Ground.png" />
     <Content Include="Content\Player.png" />
+    <Content Include="Content\playerTex.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
