--- a/Lights Out.csproj
+++ b/Lights Out.csproj
@@ -59,10 +59,15 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="MonoGame.Penumbra, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MonoGame.Penumbra.WindowsDX.1.4.0\lib\net45\MonoGame.Penumbra.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bulletTex.png" />
+    <Content Include="Content\chaserTex.png" />
     <Content Include="Content\Ground.png" />
     <Content Include="Content\Player.png" />
     <Content Include="Content\playerTex.png" />
@@ -74,6 +79,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Content\spriteFont.spritefont" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
