--- a/LightsOut/LightsOut/Lights Out.csproj
+++ b/LightsOut/LightsOut/Lights Out.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,8 +8,8 @@
     <ProjectGuid>{2E2CD2EB-8DDF-4E25-BEB9-C0E9628BC9B9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lights_Out</RootNamespace>
-    <AssemblyName>Lights Out</AssemblyName>
+    <RootNamespace>LightsOut</RootNamespace>
+    <AssemblyName>LightsOut</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
