--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -78,6 +78,7 @@
     <Content Include="Content\chaserTex.png" />
     <Content Include="Content\Ground.png" />
     <Content Include="Content\playerTex.png" />
+    <Content Include="Content\ScreenClear.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
