--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Bullet.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Charger.cs" />
     <Compile Include="Chaser.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ContentManager.cs" />
@@ -75,6 +76,7 @@
   <ItemGroup>
     <Content Include="Content\barTex.png" />
     <Content Include="Content\bulletTex.png" />
+    <Content Include="Content\chargerTex.png" />
     <Content Include="Content\chaserTex.png" />
     <Content Include="Content\Ground.png" />
     <Content Include="Content\playerTex.png" />
