--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenClear.cs" />
+    <Compile Include="Shooter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -81,6 +82,7 @@
     <Content Include="Content\Ground.png" />
     <Content Include="Content\playerTex.png" />
     <Content Include="Content\ScreenClear.png" />
+    <Content Include="Content\ShooterTex.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
