--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -41,29 +41,29 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Bullet.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="Camera.cs" />
-    <Compile Include="Charger.cs" />
-    <Compile Include="Chaser.cs" />
+    <Compile Include="Gameplay\Bullet.cs" />
+    <Compile Include="Menu\Button.cs" />
+    <Compile Include="Gameplay\Camera.cs" />
+    <Compile Include="Enemy\Charger.cs" />
+    <Compile Include="Enemy\Chaser.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ContentManager.cs" />
-    <Compile Include="Enemy.cs" />
-    <Compile Include="EnemyManager.cs" />
+    <Compile Include="Enemy\Enemy.cs" />
+    <Compile Include="Enemy\EnemyManager.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="GameManager.cs" />
-    <Compile Include="GameObject.cs" />
-    <Compile Include="HeatBar.cs" />
-    <Compile Include="Highscore.cs" />
-    <Compile Include="Lamp.cs" />
-    <Compile Include="MainMenu.cs" />
-    <Compile Include="NameEntry.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Gameplay\GameManager.cs" />
+    <Compile Include="Gameplay\GameObject.cs" />
+    <Compile Include="Gameplay\HeatBar.cs" />
+    <Compile Include="Highscore\Highscore.cs" />
+    <Compile Include="Menu\Lamp.cs" />
+    <Compile Include="Menu\MainMenu.cs" />
+    <Compile Include="Highscore\NameEntry.cs" />
+    <Compile Include="Gameplay\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rager.cs" />
-    <Compile Include="ScreenClear.cs" />
-    <Compile Include="Shooter.cs" />
+    <Compile Include="Enemy\Rager.cs" />
+    <Compile Include="Gameplay\ScreenClear.cs" />
+    <Compile Include="Enemy\Shooter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -98,6 +98,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
