--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -86,6 +86,7 @@
     <Content Include="Content\playerTex.png" />
     <Content Include="Content\ScreenClear.png" />
     <Content Include="Content\ShooterTex.png" />
+    <Content Include="Content\tempBackground.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
