new Background added

--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\barTex.png" />
+    <Content Include="Content\brickBackground.png" />
     <Content Include="Content\bulletTex.png" />
     <Content Include="Content\chargerTex.png" />
     <Content Include="Content\chaserTex.png" />
