Crosshair Functional with mouse

--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -91,6 +91,7 @@
     <Content Include="Content\crawlerPointTex.png" />
     <Content Include="Content\crawlerTailTex.png" />
     <Content Include="Content\crawlerVertebraTex.png" />
+    <Content Include="Content\Crosshair.png" />
     <Content Include="Content\Ground.png" />
     <Content Include="Content\Lights-Out-No-Farts.mp3" />
     <Content Include="Content\Lights-Out-Original-Death-Sound.wav" />
