SFX Splat for enemies

--- a/LightsOut2/LightsOut2/LightsOut2.csproj
+++ b/LightsOut2/LightsOut2/LightsOut2.csproj
@@ -94,6 +94,7 @@
     <Content Include="Content\crawlerTailTex.png" />
     <Content Include="Content\crawlerVertebraTex.png" />
     <Content Include="Content\Crosshair.png" />
+    <Content Include="Content\enemyDamageSound.wav" />
     <Content Include="Content\Ground.png" />
     <Content Include="Content\lavaBackground.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
